# webdav-request

./: Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  lib.rs  method.rs  parse.rs  read.rs  reader.rs  url.rs
src/client/: inner.rs  mod.rs
src/res/: collection.rs  mod.rs  multistatus.rs  privilege.rs
