[package]
name = "webdav-request"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "lightly webdav client library"
keywords = [
    "webdav"
]


[dependencies]
bytes = "1.7.1"
percent-encoding = "2.3.1"
quick-xml = { version = "0.36.1", features = ["serde", "serialize"] }
reqwest = { version = "0.12.5", default-features = false, features = [
    "http2",
    "charset",
    "rustls-tls",
] }

serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["io-util"] }
# tokio = { version = "1.39.2", features = ["full"] }
