[package]
name = "webdav-request"
version = "0.1.12"
edition = "2021"
license = "MIT"
description = "a lightweight webdav client library"
repository = "https://github.com/Pesju13/webdav-request"
keywords = ["webdav", "request", "rusttls"]


[dependencies]
bytes = "1.7.1"
percent-encoding = "2.3.1"
quick-xml = { version = "0.36.1", features = ["serde", "serialize"] }
reqwest = { version = "0.12.5", default-features = false, features = [
    "http2",
    "charset",
    "rustls-tls",
] }

serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2" }
# tokio = { version = "1.39.2", features = ["full"] }
