[package]
name = "webdav-request"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "a lightweight webdav client library"
repository = "https://github.com/cradiy/webdav-request.git"
keywords = ["webdav", "request", "rusttls"]


[dependencies]

bytes = "1.7.2"
percent-encoding = {version = "2.3.1", optional = true}
quick-xml = { version = "0.36.2", features = ["serde", "serialize"] }
reqwest = { version = "0.12.7", default-features = false, features = [
    "http2",
    "charset",
    "rustls-tls",
] }

serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0" }

[features]
decode_url = ["percent-encoding"]